ot-operators/cilium-network-policy-redis-operator-allow-kube-apiserver.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: redis-operator-allow-kube-apiserver
  namespace: ot-operators
spec:
  endpointSelector:
    matchLabels:
      name: redis-operator
  egress:
    - toEntities:
        - kube-apiserver
    - toServices:
        - k8sService:
            namespace: default
            serviceName: kubernetes
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
