ot-operators/network-policy-redis-operator-allow-egress-kube-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-operator-allow-egress-kube-api
  namespace: ot-operators
spec:
  podSelector:
    matchLabels:
      name: redis-operator
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.43.0.1/32
      ports:
        - protocol: TCP
          port: 443
    - to:
        - ipBlock:
            cidr: 192.168.1.100/32
      ports:
        - protocol: TCP
          port: 6443
