ot-operators/network-policy-redis-operator-allow-ingress-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-operator-allow-ingress-monitoring
  namespace: ot-operators
spec:
  podSelector:
    matchLabels:
      name: redis-operator
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8080
