ot-operators/network-policy-redis-operator-default-deny.yaml
# Network policy for redis-operator namespace.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-operator-default-deny
  namespace: ot-operators
spec:
  podSelector:
    matchLabels:
      name: redis-operator
  policyTypes:
    - Ingress
    - Egress
